--- a/release/help/SeqVarGDSClass-class.html
+++ b/release/help/SeqVarGDSClass-class.html
@@ -16,7 +16,7 @@ Variant Call Format (VCF) data. It extends <code><a href="../../gdsfmt/html/gds.
 
 <h3>Details</h3>
 
-<p>A sequencing GDS file is created from a VCF file with
+<p>A sequence GDS file is created from a VCF file with
 <code><a href="seqVCF2GDS.html">seqVCF2GDS</a></code>. This file can be opened with <code><a href="seqOpen.html">seqOpen</a></code>
 to create a <code>SeqVarGDSClass</code> object.
 </p>
@@ -94,7 +94,7 @@ returned.  Use <code><a href="seqSetFilter.html">seqSetFilter</a></code> prior t
 <code><a href="seqOpen.html">seqOpen</a></code>,
 <code><a href="seqGetData.html">seqGetData</a></code>,
 <code><a href="seqSetFilter.html">seqSetFilter</a></code>,
-<code><a href="seqClose-methods.html">seqClose</a></code>
+<code><a href="seqClose.html">seqClose</a></code>
 </p>
 
 
@@ -141,5 +141,5 @@ depth$data[1:10,1:5]
 seqClose(gds)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.8.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
