--- a/release/help/00Index.html
+++ b/release/help/00Index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>R: Big Data Management of Genome-wide Sequencing Variants</title>
+<head><title>R: Big Data Management of Genome-Wide Sequence Variants</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
-<h1> Big Data Management of Genome-wide Sequencing Variants
+<h1> Big Data Management of Genome-Wide Sequence Variants
+<img class="toplogo" src="../../../doc/html/logo.jpg" alt="[R logo]" />
 </h1>
 <hr/>
 <div style="text-align: center;">
-</div><h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.8.0</h2>
+<a href="../../../doc/html/packages.html"><img class="arrow" src="../../../doc/html/left.jpg" alt="[Up]" /></a>
+<a href="../../../doc/html/index.html"><img class="arrow" src="../../../doc/html/up.jpg" alt="[Top]" /></a>
+</div><h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.10.1</h2>
+
+<ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
+<li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
+<li><a href="../NEWS">Package NEWS</a>.</li>
+</ul>
 
 <h2>Help Pages</h2>
 
 
 <table width="100%">
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray-package</a></td>
-<td>Big Data Management of Genome-wide Sequencing Variants</td></tr>
+<td>Big Data Management of Genome-wide Sequence Variants</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">alt-method</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">asVCF-method</a></td>
@@ -28,40 +36,62 @@
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">ref-method</a></td>
 <td>SeqVarGDSClass</td></tr>
+<tr><td style="width: 25%;"><a href="seqAlleleCount.html">seqAlleleCount</a></td>
+<td>Get Allele Counts</td></tr>
+<tr><td style="width: 25%;"><a href="seqAlleleFreq.html">seqAlleleFreq</a></td>
+<td>Get Allele Frequencies</td></tr>
 <tr><td style="width: 25%;"><a href="seqApply.html">seqApply</a></td>
 <td>Apply Functions Over Array Margins</td></tr>
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray</a></td>
-<td>Big Data Management of Genome-wide Sequencing Variants</td></tr>
-<tr><td style="width: 25%;"><a href="seqClose-methods.html">seqClose</a></td>
-<td>Close a SeqArray object</td></tr>
-<tr><td style="width: 25%;"><a href="seqClose-methods.html">seqClose-method</a></td>
-<td>Close a SeqArray object</td></tr>
-<tr><td style="width: 25%;"><a href="seqCompress.Option.html">seqCompress.Option</a></td>
-<td>Compression Options for Importing VCF File(s)</td></tr>
+<td>Big Data Management of Genome-wide Sequence Variants</td></tr>
+<tr><td style="width: 25%;"><a href="seqBED2GDS.html">seqBED2GDS</a></td>
+<td>Convert PLINK BED Format to SeqArray Format</td></tr>
+<tr><td style="width: 25%;"><a href="seqClose.html">seqClose</a></td>
+<td>Close the SeqArray GDS File</td></tr>
+<tr><td style="width: 25%;"><a href="seqClose.html">seqClose-method</a></td>
+<td>Close the SeqArray GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqDelete.html">seqDelete</a></td>
-<td>Delete variables in a Sequencing GDS File</td></tr>
+<td>Delete GDS Variables</td></tr>
 <tr><td style="width: 25%;"><a href="seqExampleFileName.html">seqExampleFileName</a></td>
-<td>Example GDS file</td></tr>
+<td>Example files</td></tr>
+<tr><td style="width: 25%;"><a href="seqExport.html">seqExport</a></td>
+<td>Export to a GDS File</td></tr>
+<tr><td style="width: 25%;"><a href="seqGDS2SNP.html">seqGDS2SNP</a></td>
+<td>Convert to a SNP GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqGDS2VCF.html">seqGDS2VCF</a></td>
-<td>Convert to a VCF file</td></tr>
+<td>Convert to a VCF File</td></tr>
 <tr><td style="width: 25%;"><a href="seqGetData.html">seqGetData</a></td>
-<td>Get Data from a Sequencing GDS file</td></tr>
+<td>Get Data</td></tr>
 <tr><td style="width: 25%;"><a href="seqGetFilter.html">seqGetFilter</a></td>
-<td>Get the Filter of Samples and Variants</td></tr>
-<tr><td style="width: 25%;"><a href="seqInfoNewVar.html">seqInfoNewVar</a></td>
-<td>Add a variable to the INFO field</td></tr>
+<td>Get the Filter of GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqMerge.html">seqMerge</a></td>
-<td>Merge Multiple Sequencing GDS Files</td></tr>
+<td>Merge Multiple Sequence GDS Files</td></tr>
+<tr><td style="width: 25%;"><a href="seqMissing.html">seqMissing</a></td>
+<td>Missing genotype percentage</td></tr>
+<tr><td style="width: 25%;"><a href="seqNumAllele.html">seqNumAllele</a></td>
+<td>Number of alleles</td></tr>
 <tr><td style="width: 25%;"><a href="seqOpen.html">seqOpen</a></td>
-<td>Open a Sequencing GDS File</td></tr>
+<td>Open a Sequence GDS File</td></tr>
+<tr><td style="width: 25%;"><a href="seqOptimize.html">seqOptimize</a></td>
+<td>Optimize the Storage of Data Array</td></tr>
 <tr><td style="width: 25%;"><a href="seqParallel.html">seqParallel</a></td>
 <td>Apply Functions in Parallel</td></tr>
+<tr><td style="width: 25%;"><a href="seqParallelSetup.html">seqParallelSetup</a></td>
+<td>Setup a Parallel Environment</td></tr>
+<tr><td style="width: 25%;"><a href="seqSetFilter.html">seqResetFilter</a></td>
+<td>Set a Filter to Sample or Variant</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilter</a></td>
-<td>Set a filter to sample or variant</td></tr>
-<tr><td style="width: 25%;"><a href="seqSlidingWindow.html">seqSlidingWindow</a></td>
-<td>Apply functions via a sliding window over variants</td></tr>
+<td>Set a Filter to Sample or Variant</td></tr>
+<tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilter-method</a></td>
+<td>Set a Filter to Sample or Variant</td></tr>
+<tr><td style="width: 25%;"><a href="seqSetFilterChrom.html">seqSetFilterChrom</a></td>
+<td>Chromosome Selection</td></tr>
+<tr><td style="width: 25%;"><a href="seqSNP2GDS.html">seqSNP2GDS</a></td>
+<td>Convert SNPRelate Format to SeqArray Format</td></tr>
+<tr><td style="width: 25%;"><a href="seqStorage.Option.html">seqStorage.Option</a></td>
+<td>Storage and Compression Options for Importing VCF File(s)</td></tr>
 <tr><td style="width: 25%;"><a href="seqSummary.html">seqSummary</a></td>
-<td>Get the summary of a GDS file</td></tr>
+<td>Summarize the Sequence GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqTranspose.html">seqTranspose</a></td>
 <td>Transpose Data Array</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></td>
@@ -69,10 +99,10 @@
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">SeqVarGDSClass-class</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="seqVCF.Header.html">seqVCF.Header</a></td>
-<td>Parse the header of a VCF file</td></tr>
+<td>Parse the Header of a VCF File</td></tr>
 <tr><td style="width: 25%;"><a href="seqVCF.SampID.html">seqVCF.SampID</a></td>
-<td>Get the sample IDs of a VCF file</td></tr>
+<td>Get the Sample IDs</td></tr>
 <tr><td style="width: 25%;"><a href="seqVCF2GDS.html">seqVCF2GDS</a></td>
-<td>Reformat VCF files</td></tr>
+<td>Reformat VCF Files</td></tr>
 </table>
 </body></html>
