--- a/release/help/seqDelete.html
+++ b/release/help/seqDelete.html
@@ -1,22 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Delete variables in a Sequencing GDS File</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Delete GDS Variables</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqDelete {SeqArray}"><tr><td>seqDelete {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Delete variables in a Sequencing GDS File</h2>
+<h2>Delete GDS Variables</h2>
 
 <h3>Description</h3>
 
-<p>Delete variables in a sequencing GDS file
+<p>Deletes variables in the sequence GDS file.
 </p>
 
 
 <h3>Usage</h3>
 
 <pre>
-seqDelete(gdsfile, info.varname=NULL, format.varname=NULL)
+seqDelete(gdsfile, info.varname=character(), format.varname=character(),
+    verbose=TRUE)
 </pre>
 
 
@@ -37,6 +38,10 @@ seqDelete(gdsfile, info.varname=NULL, format.varname=NULL)
 <p>the variables in the FORMAT field, i.e.,
 &quot;annotation/format/VARIABLE_NAME&quot;</p>
 </td></tr>
+<tr valign="top"><td><code>verbose</code></td>
+<td>
+<p>if <code>TRUE</code>, show information</p>
+</td></tr>
 </table>
 
 
@@ -53,7 +58,7 @@ seqDelete(gdsfile, info.varname=NULL, format.varname=NULL)
 
 <h3>See Also</h3>
 
-<p><code><a href="seqOpen.html">seqOpen</a></code>, <code><a href="seqClose-methods.html">seqClose</a></code>
+<p><code><a href="seqOpen.html">seqOpen</a></code>, <code><a href="seqClose.html">seqClose</a></code>
 </p>
 
 
@@ -71,13 +76,18 @@ seqVCF2GDS(vcf.fn, "tmp.gds")
 (f &lt;- seqOpen("tmp.gds", FALSE))
 
 seqDelete(f, info.varname=c("HM2", "AA"), format.varname="DP")
+f
 
 # close the GDS file
 seqClose(f)
 
 # clean up the fragments, reduce the file size
 cleanup.gds("tmp.gds")
+
+
+# remove the temporary file
+unlink("tmp.gds", force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.8.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
