--- a/release/help/seqExampleFileName.html
+++ b/release/help/seqExampleFileName.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Example GDS file</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Example files</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqExampleFileName {SeqArray}"><tr><td>seqExampleFileName {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Example GDS file</h2>
+<h2>Example files</h2>
 
 <h3>Description</h3>
 
-<p>The example GDS file for sequencing variants
+<p>The example files of VCF and GDS format.
 </p>
 
 
 <h3>Usage</h3>
 
 <pre>
-seqExampleFileName(type=c("gds", "vcf"))
+seqExampleFileName(type=c("gds", "vcf", "KG_Phase1"))
 </pre>
 
 
@@ -32,15 +32,15 @@ seqExampleFileName(type=c("gds", "vcf"))
 
 <h3>Details</h3>
 
-<p>A GDS sequencing-variant file was created from a subset of VCF data of
-the 1000 Genomes Project.
+<p>The SeqArray GDS file was created from a subset of VCF data of the 1000
+Genomes Phase 1 Project.
 </p>
 
 
 <h3>Value</h3>
 
-<p>Return the file name of a VCF file shipped with the package if <code>type = "vcf"</code>,
-or the file name of a GDS file if <code>type = "gds"</code>.
+<p>Return the file name of a VCF file shipped with the package if
+<code>type = "vcf"</code>, or the file name of a GDS file if <code>type = "gds"</code>.
 </p>
 
 
@@ -55,7 +55,9 @@ or the file name of a GDS file if <code>type = "gds"</code>.
 seqExampleFileName("gds")
 
 seqExampleFileName("vcf")
+
+seqExampleFileName("KG_Phase1")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.8.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
