--- a/release/help/seqGDS2VCF.html
+++ b/release/help/seqGDS2VCF.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Convert to a VCF file</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Convert to a VCF File</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqGDS2VCF {SeqArray}"><tr><td>seqGDS2VCF {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Convert to a VCF file</h2>
+<h2>Convert to a VCF File</h2>
 
 <h3>Description</h3>
 
-<p>Convert a GDS file to a VCF file
+<p>Converts a sequence GDS file to a VCF file.
 </p>
 
 
@@ -45,7 +45,7 @@ in the FORMAT field</p>
 </td></tr>
 <tr valign="top"><td><code>verbose</code></td>
 <td>
-<p>if TRUE, show information</p>
+<p>if <code>TRUE</code>, show information</p>
 </td></tr>
 </table>
 
@@ -95,9 +95,8 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 <h3>Examples</h3>
 
 <pre>
-# the file of GDS
-gds.fn &lt;- seqExampleFileName("gds")
-# or gds.fn &lt;- "C:/YourFolder/Your_GDS_File.gds"
+# the GDS file
+(gds.fn &lt;- seqExampleFileName("gds"))
 
 # display
 (f &lt;- seqOpen(gds.fn))
@@ -131,7 +130,7 @@ seqGDS2VCF(f, "tmp2.vcf.gz", info.var=c("BN","GP","AA","DP","HM2"), fmt.var=char
 # call "diff" in Unix (a command line tool comparing files line by line)
 
 # using all samples and variants
-seqSetFilter(f)
+seqResetFilter(f)
 
 # convert
 seqGDS2VCF(f, "tmp.vcf.gz")
@@ -154,5 +153,5 @@ unlink(c("tmp.vcf.gz", "tmp1.vcf.gz", "tmp2.vcf.gz"))
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.8.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
