--- a/release/help/seqGetFilter.html
+++ b/release/help/seqGetFilter.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Get the Filter of Samples and Variants</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Get the Filter of GDS File</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqGetFilter {SeqArray}"><tr><td>seqGetFilter {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Get the Filter of Samples and Variants</h2>
+<h2>Get the Filter of GDS File</h2>
 
 <h3>Description</h3>
 
-<p>Get the filter of samples and variants
+<p>Gets the filter of samples and variants.
 </p>
 
 
@@ -68,9 +68,8 @@ internal data for <code>seqGetData</code>, <code>seqApply</code>, etc.
 <h3>Examples</h3>
 
 <pre>
-# the file of GDS
-gds.fn &lt;- seqExampleFileName("gds")
-# or gds.fn &lt;- "C:/YourFolder/Your_GDS_File.gds"
+# the GDS file
+(gds.fn &lt;- seqExampleFileName("gds"))
 
 # display
 (f &lt;- seqOpen(gds.fn))
@@ -101,5 +100,5 @@ sum(z$variant.sel)
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.8.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
