--- a/release/help/seqMerge.html
+++ b/release/help/seqMerge.html
@@ -1,23 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Merge Multiple Sequencing GDS Files</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Merge Multiple Sequence GDS Files</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqMerge {SeqArray}"><tr><td>seqMerge {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Merge Multiple Sequencing GDS Files</h2>
+<h2>Merge Multiple Sequence GDS Files</h2>
 
 <h3>Description</h3>
 
-<p>Merge multiple sequencing GDS files
+<p>Merges multiple sequence GDS files.
 </p>
 
 
 <h3>Usage</h3>
 
 <pre>
-seqMerge(gds.fn, out.fn, compress.option = seqCompress.Option(),
-	verbose = TRUE)
+seqMerge(gds.fn, out.fn, storage.option=seqStorage.Option(), verbose=TRUE)
 </pre>
 
 
@@ -32,23 +31,23 @@ seqMerge(gds.fn, out.fn, compress.option = seqCompress.Option(),
 <td>
 <p>the output file name</p>
 </td></tr>
-<tr valign="top"><td><code>compress.option</code></td>
+<tr valign="top"><td><code>storage.option</code></td>
 <td>
-<p>specify the compression options, by default
-<code><a href="seqCompress.Option.html">seqCompress.Option</a></code></p>
+<p>specify the storage and compression options,
+by default <code><a href="seqStorage.Option.html">seqStorage.Option</a></code></p>
 </td></tr>
 <tr valign="top"><td><code>verbose</code></td>
 <td>
-<p>if TRUE, show information</p>
+<p>if <code>TRUE</code>, show information</p>
 </td></tr>
 </table>
 
 
 <h3>Details</h3>
 
-<p>The current implementation of <code>seqMerge</code> extracts and merges the genotypic
-data only without any annotation. Users can specify multiple VCF files in
-<code><a href="seqVCF2GDS.html">seqVCF2GDS</a></code> to export a single GDS file.
+<p>The current implementation of <code>seqMerge</code> extracts and merges the
+genotypic data only without any annotation. Users can specify multiple VCF
+files in <code><a href="seqVCF2GDS.html">seqVCF2GDS</a></code> to export a single GDS file.
 </p>
 
 
@@ -68,5 +67,5 @@ data only without any annotation. Users can specify multiple VCF files in
 <p><code><a href="seqVCF2GDS.html">seqVCF2GDS</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.8.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
