--- a/release/help/seqTranspose.html
+++ b/release/help/seqTranspose.html
@@ -9,7 +9,7 @@
 
 <h3>Description</h3>
 
-<p>Transpose data array or matrix for possibly higher-speed access
+<p>Transpose data array or matrix for possibly higher-speed access.
 </p>
 
 
@@ -33,20 +33,21 @@ seqTranspose(gdsfile, var.name, compress=NULL, verbose=TRUE)
 </td></tr>
 <tr valign="top"><td><code>compress</code></td>
 <td>
-<p>the compression option used in <code><a href="../../gdsfmt/html/add.gdsn.html">add.gdsn</a></code>; or
-determine automatically if <code>NULL</code></p>
+<p>the compression option used in
+<code><a href="../../gdsfmt/html/add.gdsn.html">add.gdsn</a></code>; or determine automatically
+if <code>NULL</code></p>
 </td></tr>
 <tr valign="top"><td><code>verbose</code></td>
 <td>
-<p>if TRUE, show information</p>
+<p>if <code>TRUE</code>, show information</p>
 </td></tr>
 </table>
 
 
 <h3>Details</h3>
 
-<p>It is designed for possibly higher-speed access. More details will be provided
-in the future version.
+<p>It is designed for possibly higher-speed access. More details will be
+provided in the future version.
 </p>
 
 
@@ -70,9 +71,8 @@ in the future version.
 <h3>Examples</h3>
 
 <pre>
-# the file name of VCF
+# the VCF file
 (vcf.fn &lt;- seqExampleFileName("vcf"))
-# or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
 # convert
 seqVCF2GDS(vcf.fn, "tmp.gds")
@@ -91,8 +91,10 @@ index.gdsn(f, "genotype/~data")
 
 # close
 seqClose(f)
+
+# delete the temporary file
 unlink("tmp.gds")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.8.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
