--- a/release/help/seqVCF2GDS.html
+++ b/release/help/seqVCF2GDS.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Reformat VCF files</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Reformat VCF Files</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqVCF2GDS {SeqArray}"><tr><td>seqVCF2GDS {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Reformat VCF files</h2>
+<h2>Reformat VCF Files</h2>
 
 <h3>Description</h3>
 
-<p>Reformat Variant Call Format (VCF) files.
+<p>Reformats Variant Call Format (VCF) files.
 </p>
 
 
 <h3>Usage</h3>
 
 <pre>
-seqVCF2GDS(vcf.fn, out.fn, header = NULL, genotype.var.name = "GT",
-    compress.option = seqCompress.Option(), info.import=NULL, fmt.import=NULL,
-    ignore.chr.prefix="chr", raise.error=TRUE, verbose=TRUE)
+seqVCF2GDS(vcf.fn, out.fn, header=NULL, genotype.var.name="GT",
+    genotype.storage=c("bit2", "bit4", "bit8"),
+    storage.option=seqStorage.Option(),
+    info.import=NULL, fmt.import=NULL, ignore.chr.prefix="chr",
+    optimize=TRUE, raise.error=TRUE, verbose=TRUE)
 </pre>
 
 
@@ -43,10 +45,16 @@ seqVCF2GDS(vcf.fn, out.fn, header = NULL, genotype.var.name = "GT",
 <p>the ID for genotypic data in the FORMAT column;
 &quot;GT&quot; by default, VCFv4.0</p>
 </td></tr>
-<tr valign="top"><td><code>compress.option</code></td>
+<tr valign="top"><td><code>genotype.storage</code></td>
 <td>
-<p>specify the compression options, by default
-<code><a href="seqCompress.Option.html">seqCompress.Option</a></code></p>
+<p>&quot;bit2&quot; by default; with respect to the compression
+size and access speed, &quot;bit2&quot; is the most efficient when most of
+variants are biallelic.</p>
+</td></tr>
+<tr valign="top"><td><code>storage.option</code></td>
+<td>
+<p>specify the storage and compression options,
+by default <code><a href="seqStorage.Option.html">seqStorage.Option</a></code>, see details</p>
 </td></tr>
 <tr valign="top"><td><code>info.import</code></td>
 <td>
@@ -64,6 +72,11 @@ for import; or <code>NULL</code> for all variables</p>
 chromosome which should be ignored, like &quot;chr&quot;; it is not
 case-sensitive</p>
 </td></tr>
+<tr valign="top"><td><code>optimize</code></td>
+<td>
+<p>if <code>TRUE</code>, optimize the access efficiency by calling
+<code><a href="../../gdsfmt/html/cleanup.gds.html">cleanup.gds</a></code></p>
+</td></tr>
 <tr valign="top"><td><code>raise.error</code></td>
 <td>
 <p><code>TRUE</code>: throw an error if numeric conversion fails;
@@ -71,7 +84,7 @@ case-sensitive</p>
 </td></tr>
 <tr valign="top"><td><code>verbose</code></td>
 <td>
-<p>if TRUE, show information</p>
+<p>if <code>TRUE</code>, show information</p>
 </td></tr>
 </table>
 
@@ -86,8 +99,18 @@ storing DNA polymorphism data such as SNPs, insertions, deletions and
 structural variants, together with rich annotations.
 </p>
 <p>If there are more than one files in <code>vcf.fn</code>, <code>seqVCF2GDS</code> will
-merge all dataset together if they contain the same samples. It is useful
+merge all VCF files together if they contain the same samples. It is useful
 to merge genomic variants if VCF data are divided by chromosomes.
+</p>
+<p>The real numbers in the VCF file(s) are stored in 32-bit floating-point
+format by default. Users can set <code>seqStorage.Option(float.mode="float64")</code>
+to switch to 64-bit floating point format. Or packed real numbers can be
+adopted by setting
+<code>seqStorage.Option(float.mode="packedreal16:scale=0.0001")</code>.
+</p>
+<p>By default, the compression method is &quot;ZIP_RA&quot; (zlib algorithm with default
+compression level + multiple independent data blocks). Users can maximize the
+compression ratio by <code>storage.option=seqStorage.Option("ZIP_RA.max")</code>.
 </p>
 
 
@@ -110,13 +133,11 @@ Handsaker RE, Lunter G, Marth GT, Sherry ST, McVean G, Durbin R;
 1000 Genomes Project Analysis Group.
 Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 </p>
-<p><a href="http://corearray.sourceforge.net/">http://corearray.sourceforge.net/</a>
-</p>
 
 
 <h3>See Also</h3>
 
-<p><code><a href="seqVCF.Header.html">seqVCF.Header</a></code>, <code><a href="seqCompress.Option.html">seqCompress.Option</a></code>,
+<p><code><a href="seqVCF.Header.html">seqVCF.Header</a></code>, <code><a href="seqStorage.Option.html">seqStorage.Option</a></code>,
 <code><a href="seqGDS2VCF.html">seqGDS2VCF</a></code>
 </p>
 
@@ -124,9 +145,8 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 <h3>Examples</h3>
 
 <pre>
-# the file name of VCF
+# the VCF file
 vcf.fn &lt;- seqExampleFileName("vcf")
-# or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
 # convert
 seqVCF2GDS(vcf.fn, "tmp.gds")
@@ -146,14 +166,18 @@ seqClose(f)
 
 
 
-# convert without the INFO fields
+# convert without the INFO and FORMAT fields
 seqVCF2GDS(vcf.fn, "tmp.gds",
     info.import=character(0), fmt.import=character(0))
 
 # display
 (f &lt;- seqOpen("tmp.gds"))
 seqClose(f)
+
+
+# delete the temporary file
+unlink("tmp.gds")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.8.0 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.1 <a href="00Index.html">Index</a>]</div>
 </body></html>
